# SPI

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  INSTALL.txt  Install  README-ECCC.md  README-GITHUB.md  README.md  SETUP.sh  makeit
LibTkGL/TclGeoEER/: Makefile  Makefile.in  aclocal.m4  configure.in  pkgIndex.tcl.in
LibTkGL/TclGeoEER/MetObsTest/: Makefile  spi_queries.txt  test.tcl
LibTkGL/TclGeoEER/generic/: Data_Calc.c  Data_Calc.h  Data_Calc.l  Data_Calc.y  Data_FF.c  Data_FF.h  Data_Funcs.c  Data_Funcs.h  Data_Matrix.c  Data_Matrix.h  Data_Render.c  Data_RenderShader.c  FSTD_Export.c  FSTD_Field.c  GDAL_Band.c  GRIB_Field.c  GeoData.c  GeoData.h  GeoRef.c  GeoRef.h  GeoRef_RDR.c  GeoRef_RPN.c  GeoRef_WKT.c  GeoSpatialData.h  GeoTex.c  GeoTex.h  Makefile  OGR_Geometry.c  OGR_Layer.c  OGR_Math.c  ProjAzimuth.c  ProjCam.c  ProjCam.h  ProjCylin.c  ProjGrid.c  ProjOrtho.c  Projection.c  Projection.h  Radar_Scan.c  Vertex.c  (+63 more)
LibTkGL/TclGeoEER/m4/: ax_lib_ecbufr.m4  ax_lib_eer.m4  ax_lib_gdb.m4  ax_lib_rmn.m4
SPI/: .profile_spi  CMakeLists.txt  MANIFEST  VERSION  VERSION.in  makeit  tclsh  tclshd  wish
SPI/.ssm.d/: post-install.in
SPI/data/: AEGL.tcl  ISTOP_Regions.dbf  MWO.shx  ModelDomain.dbf  ModelDomain.shp  ModelDomain.shx  ModelDomainWaves.dbf  ModelDomainWaves.shp  ModelDomainWaves.shx  ModelDomainWet.dbf  ModelDomainWet.shp  ModelDomainWet.shx  NavAid.src  Nuclear.src  RADAR.dbf  RADAR.shx  RSMC.reg  Spill.src  TimeZone.shx  VAAC.dbf  VAAC.shp  VAAC.shx  VAAC_555km.dbf  VAAC_555km.shp  VAAC_Washington_backup.dbf  VAAC_Washington_backup.prj  VAAC_Washington_backup.reg  VAAC_Washington_backup.shp  VAAC_Washington_backup.shx  Volcano.src  land_PubMesoZone.sbn  land_PubMesoZone.sbx  land_PubMesoZone.shp.xml  land_PubStdZone.dbf  land_PubStdZone.sbn  land_PubStdZone.sbx  land_PubStdZone.shp.xml  land_PubStdZone.shx  water_MarStdZone.prj  water_MarStdZone.sbn  (+2 more)
SPI/data/ModelDomain/: canso100.fst  canso500.fst  caps.fstd  caps_2025063000_003.fst  caps_eta.fstd  ciops_east.fstd  ciops_west.fstd  fundy500.fst  hrdps_2019100100_001.fstd  hrdps_nord.fstd  hrdps_nord_2021101712_001.fstd  hrdps_west.fstd  hrdps_west_2021101712_001.fstd  rdwps_eri.fstd  rdwps_eri_2021102006_001.fstd  rdwps_hum.fstd  rdwps_hum_2021102006_001.fstd  rdwps_nep.txt  rdwps_nwa.txt  rdwps_ont.fstd  rdwps_ont_2021102006_001.fstd  rdwps_sup.fstd  rdwps_sup_2021102006_001.fstd  riops.fstd  salish.txt  shop.txt  stle500.fst  wcps.txt
SPI/share/bitmap/: RSMC_ver_small.xbm  YInc.xbm  bound.xbm  contour3.xbm  cvdel.xbm  dash2.xbm  dash3.xbm  digit1.xbm  digit3.xbm  down.xbm  fill.xbm  flag_ver_small.xbm  grey00.xbm  isoSurface.xbm  label1.xbm  label3.xbm  nofill.xbm  optcheck.xbm  rayCasting.xbm  rayhor08.xbm  rayver04.xbm  rayver08.xbm  spline.xbm  stipple4.xbm  width4.xbm  wind2.xbm  wind4.xbm
SPI/share/font/: fonts.dir  makefont.sh
SPI/share/shader/: SHF_DataTex.glsl  SHF_FieldTex.glsl  SHF_RayCasting.glsl  SHV_DataTex.glsl  SHV_Field.glsl  SHV_FieldTex.glsl  SHV_RayCasting.glsl
SPI/share/xorg/: xorg.conf  xorg_dummy.conf
SPI/tcl/: SPI.ctes  SPI.int  SPI.tcl  SPI.txt
SPI/tcl/Lib/: Animator.tcl  Calendar.tcl  CanvasBubble.tcl  CanvasShape.tcl  ColorBar.tcl  ColorBox.tcl  ComboBox.tcl  Convert.tcl  DBBox.tcl  DataBar.tcl  Data_Areas.tcl  Data_FSTD.tcl  Data_Obs.tcl  Data_Trajectory.tcl  DateStuff.tcl  Dialog.tcl  Export.tcl  FieldBox.tcl  FieldCalc.tcl  FileBox.tcl  FontBox.tcl  Graph.tcl  Graph_Compare.tcl  Graph_Contingency.tcl  Graph_Frequence.tcl  Graph_Hovmoller.tcl  Graph_Profile.tcl  Graph_Scatter.tcl  Graph_Section.tcl  Graph_Time.tcl  Graph_TimeSection.tcl  Grid.tcl  Icons.tcl  Info.tcl  InfoFrame.tcl  Legend.tcl  LimitBox.tcl  Logger.tcl  MapBox.tcl  MetData.tcl  (+14 more)
libSPI/: CMakeLists.txt  MANIFEST  makeit
libSPI/.ssm.d/: post-install  post-install.in
libSPI/TclGeoEER/: CMakeLists.txt  MANIFEST  Makefile.in  aclocal.m4  configure.in
libSPI/TclGeoEER/MetObsTest/: Makefile
libSPI/TclGeoEER/generic/: Data_Calc.c  Data_Calc.h  Data_Calc.l  Data_Calc.y  Data_External.c  Data_FF.c  Data_Funcs.c  Data_Funcs.h  Data_Matrix.c  Data_Matrix.h  Data_Render.c  Data_RenderShader.c  FSTD_Export.c  FSTD_Field.c  GDAL_Band.c  GRIB_Field.c  GeoData.c  GeoData.h  GeoSpatialData.c  GeoTex.c  OGR_Geometry.c  OGR_Layer.c  ProjAzimuth.c  ProjCam.c  ProjCam.h  ProjCylin.c  ProjGrid.c  ProjOrtho.c  Projection.c  Projection.h  Radar_Scan.c  stars.h  tcl3DModel.c  tcl3DModel3DS.c  tcl3DModelCityGML.c  tcl3DModelDAE.c  tcl3DModelFLT.c  tcl3DModelKML.c  tcl3DModelMDL.c  tcl3DModelOBJ.c  (+42 more)
libSPI/TclGeoEER/tclconfig/: tcl.m4
libSPI/TclR/: CMakeLists.txt  MANIFEST  aclocal.m4  configure.in
libSPI/TclR/generic/: TclR.c
libSPI/TclRDevice/: CMakeLists.txt  MANIFEST  Makefile.in  configure.in  tclconfig
libSPI/TclRDevice/generic/: TclRDevice.c  TclRDevice2PS.c  TclRDevice2PS.h  TclRDeviceGL.c  TclRDeviceGL.h  TclRDeviceX.c  TclRDeviceX.h  tkCanvRDevice.c
libSPI/TclSystem/: CMakeLists.txt  MANIFEST  configure.in
libSPI/TclSystem/generic/: tclSystem.c  tclSystem.h
libSPI/TkglCanvas/: CMakeLists.txt  MANIFEST  README.txt  configure.in  pkgIndex.tcl.in
libSPI/TkglCanvas/generic/: glFont.c  glShader.c  glStuff.c  glStuff.h  tkCanvWind.c  tkImgSVG.c  tkglCanvLine.c  tkglCanvPoly.c  tkglCanvText.h  tkglCanvas.c  tkglCanvas.h  tkglRectOval.c  tr.c  tr.h
libSPI/cmake/: FindECBUFR.cmake  FindECCODES.cmake  FindEER.cmake  FindFLT.cmake  FindGDB.cmake  FindR.cmake  FindRMN.cmake  FindURP.cmake  FindVGRID.cmake  compiler_presets.cmake  distclean.cmake  ec_bin_config.cmake  ec_build_info.cmake  ec_build_tcl_pkgindex.cmake  ec_parse_manifest.cmake  ec_utils.cmake
libSPI/m4/: ax_lib_DistanceMetrics.m4  ax_lib_TclGeoEER.m4  ax_lib_ecbufr.m4  ax_lib_eccodes.m4  ax_lib_eer.m4  ax_lib_flt.m4  ax_lib_gdb.m4  ax_lib_rmn.m4  ax_lib_urp.m4
libSPI/share/rmn/: README.md  dict-2.0.dtd  dict-2.1.dtd  dict-2.2.dtd  dict-2.3.dtd  dict-2.4.dtd  ops.variable_dictionary.xml  ops.variable_dictionary.xml.20210629  table_b_bufr  table_b_bufr_conf  table_b_bufr_e  table_b_bufr_f  table_b_bufr_master  table_d_bufr  (+5 more)
(+2429 files in other folders)
