#!/bin/bash -norc
dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run during Tcl installation
dnl	to configure the system for the local environment.

#-----------------------------------------------------------------------
# Sample configure.in for Tcl Extensions.  The only places you should
# need to modify this file are marked by the string __CHANGE__
#-----------------------------------------------------------------------

#-----------------------------------------------------------------------
# __CHANGE__
# Set your package name and version numbers here.
#
# This initializes the environment with PACKAGE_NAME and PACKAGE_VERSION
# set as provided.  These will also be added as -D defs in your Makefile
# so you can encode the package version directly into the source files.
# This will also define a special symbol for Windows (BUILD_sample in
# this case) so that we create the export library with the dll.
#-----------------------------------------------------------------------

AC_INIT([TclGeoEER], [8.0.0])

PKG_CFLAGS="-D_GNU_SOURCE -D_BSD_SOURCE"

# ---------------------------------------------------------------------------
# Check for RMN
# ---------------------------------------- -----------------------------------

AX_LIB_RMN()
 
if test "$HAVE_RMN" = "yes"; then
   PKG_LIBS="$PKG_LIBS $RMN_LDFLAGS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_RMN $RMN_CFLAGS"
fi

# ---------------------------------------------------------------------------
# Check for EC GDB
# ---------------------------------------------------------------------------

AX_LIB_GDB()
 
if test "$HAVE_GDB" = "yes"; then
   PKG_LIBS="$PKG_LIBS $GDB_LDFLAGS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_GDB $GDB_CFLAGS"
fi

# ---------------------------------------------------------------------------
# Check for ECCODES
# ---------------------------------------- -----------------------------------

AX_LIB_ECCODES()
 
if test "$HAVE_ECCODES" = "yes"; then
   PKG_LIBS="$PKG_LIBS $ECCODES_LDFLAGS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_ECCODES $ECCODES_CFLAGS"
fi

# ---------------------------------------------------------------------------
# Check for ECBUFR
# ---------------------------------------- -----------------------------------

AX_LIB_ECBUFR()
 
if test "$HAVE_ECBUFR" = "yes"; then
   PKG_LIBS="$PKG_LIBS $ECBUFR_LDFLAGS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_ECBUFR $ECBUFR_CFLAGS"
fi

# ---------------------------------------------------------------------------
# Check for FLT
# ---------------------------------------------------------------------------

AX_LIB_FLT()
 
if test "$HAVE_FLT" = "yes"; then
   PKG_LIBS="$PKG_LIBS $FLT_LDFLAGS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_FLT $FLT_CFLAGS"
fi

# ---------------------------------------------------------------------------
# Check for URP
# ---------------------------------------------------------------------------

AX_LIB_URP()
 
if test "$HAVE_URP" = "yes"; then
   PKG_LIBS="$PKG_LIBS $URP_LDFLAGS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_URP $URP_CFLAGS"
fi

# ---------------------------------------------------------------------------
# Check for GDAL/OGR
# ---------------------------------------------------------------------------

GDAL_INIT(1.9.0) 
if test "$HAVE_GDAL" = "yes"; then
   PKG_LIBS="$PKG_LIBS $GDAL_LIBS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_GDAL $GDAL_CFLAGS"
fi

# ---------------------------------------------------------------------------
# Check for EER
# ---------------------------------------------------------------------------

AX_LIB_EER()
 
if test "$HAVE_EER" = "yes"; then
   PKG_LIBS="$PKG_LIBS $EER_LDFLAGS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_EER $EER_CFLAGS"
fi


# ---------------------------------------------------------------------------
# Check for OpenMP
# ---------------------------------------------------------------------------
AX_OPENMP([
   PKG_LIBS="$PKG_LIBS $OPENMP_CFLAGS"
   PKG_CFLAGS="$PKG_CFLAGS -DHAVE_OPENMP $OPENMP_CFLAGS"
])

#--------------------------------------------------------------------
# Call TEA_INIT as the first TEA_ macro to set up initial vars.
# This will define a ${TEA_PLATFORM} variable == "unix" or "windows"
# as well as PKG_LIB_FILE and PKG_STUB_LIB_FILE.
#--------------------------------------------------------------------

TEA_INIT([3.9])

AC_CONFIG_AUX_DIR(tclconfig)

#--------------------------------------------------------------------
# Load the tclConfig.sh file
#--------------------------------------------------------------------

TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG

#--------------------------------------------------------------------
# Load the tkConfig.sh file if necessary (Tk extension)
#--------------------------------------------------------------------

TEA_PATH_TKCONFIG
TEA_LOAD_TKCONFIG

#-----------------------------------------------------------------------
# Handle the --prefix=... option by defaulting to what Tcl gave.
# Must be called after TEA_LOAD_TCLCONFIG and before TEA_SETUP_COMPILER.
#-----------------------------------------------------------------------

TEA_PREFIX

#-----------------------------------------------------------------------
# Standard compiler checks.
# This sets up CC by using the CC env var, or looks for gcc otherwise.
# This also calls AC_PROG_CC and a few others to create the basic setup
# necessary to compile executables.
#-----------------------------------------------------------------------

TEA_SETUP_COMPILER

#-----------------------------------------------------------------------
# __CHANGE__
# Specify the C source files to compile in TEA_ADD_SOURCES,
# public headers that need to be installed in TEA_ADD_HEADERS,
# stub library C source files to compile in TEA_ADD_STUB_SOURCES,
# and runtime Tcl library files in TEA_ADD_TCL_SOURCES.
# This defines PKG(_STUB)_SOURCES, PKG(_STUB)_OBJECTS, PKG_HEADERS
# and PKG_TCL_SOURCES.
#-----------------------------------------------------------------------

TEA_ADD_SOURCES([generic/Data_Calc.c \
                 generic/Data_FF.c \
                 generic/Data_Funcs.c \
                 generic/Data_Matrix.c \
                 generic/Data_Render.c \
                 generic/Data_RenderShader.c \
                 generic/FSTD_Export.c \
                 generic/FSTD_Field.c \
                 generic/GDAL_Band.c \
                 generic/GRIB_Field.c \
                 generic/GeoTex.c \
                 generic/OGR_Geometry.c \
                 generic/OGR_Layer.c \
                 generic/Radar_Scan.c \
                 generic/tclGeoRef.c \
                 generic/tcl3DModel.c \
                 generic/tcl3DModel3DS.c \
                 generic/tcl3DModelCityGML.c \
                 generic/tcl3DModelDAE.c \
                 generic/tcl3DModelFLT.c \
                 generic/tcl3DModelKML.c \
                 generic/tcl3DModelMDL.c \
                 generic/tcl3DModelOBJ.c \
                 generic/tclCMap.c \
                 generic/tclData.c \
                 generic/tclDataSpec.c \
                 generic/tclFSTD.c \
                 generic/tclGDAL.c \
                 generic/tclGRIB.c \
                 generic/tclMetDataset.c \
                 generic/tclMetModel.c \
                 generic/tclMetObs.c \
                 generic/tclMetObs_ASCII.c \
                 generic/tclMetObs_BUFR.c \
                 generic/tclMetObs_BURP.c \
                 generic/tclMetObs_SWOB.c \
                 generic/tclOGR.c \
                 generic/tclObs.c \
                 generic/tclRADAR.c \
                 generic/tclTraj.c \
                 generic/tclVector.c \
                 generic/tclXML.c \
                 generic/GeoData.c \
                 generic/GeoSpatialData.c \
                 generic/ProjAzimuth.c \
                 generic/ProjCam.c \
                 generic/ProjCylin.c \
                 generic/ProjGrid.c \
                 generic/ProjOrtho.c \
                 generic/Projection.c \
                 generic/tkCanvColorbar.c \
                 generic/tkCanvGraph.c \
                 generic/tkCanvVP.c \
                 generic/tkGraphAxis.c \
                 generic/tkGraphItem.c \
                 generic/tkGraphTephi.c \
                 generic/Data_External.c])

TEA_ADD_HEADERS([generic/Data_Calc.h \
                 generic/Data_FF.h \
                 generic/Data_Funcs.h \
                 generic/Data_Matrix.h \
                 generic/GeoData.h \
                 generic/GeoSpatialData.h \
                 generic/GeoTex.h \
                 generic/ProjCam.h \
                 generic/Projection.h \
                 generic/stars.h \
                 generic/tcl3DModel.h \
                 generic/tcl3DModel3DS.h \
                 generic/tclCMap.h \
                 generic/tclData.h \
                 generic/tclDataSpec.h \
                 generic/tclFSTD.h \
                 generic/tclGDAL.h \
                 generic/tclGRIB.h \
                 generic/tclMetDataset.h \
                 generic/tclMetObs.h \
                 generic/tclMetTables.h \
                 generic/tclOGR.h \
                 generic/tclObs.h \
                 generic/tclRADAR.h \
                 generic/tclTraj.h \
                 generic/tclVector.h \
                 generic/tclXML.h \
                 generic/tkCanvColorbar.h \
                 generic/tkCanvGraph.h \
                 generic/tkCanvVP.h \
                 generic/tkGraphAxis.h \
                 generic/tkGraphItem.h])

TEA_ADD_INCLUDES([-Igeneric -I${prefix}/include])
TEA_ADD_LIBS([-lc -lexpat -lGL -lGLU -ltk8.6 -L${TCL_BIN_DIR}/TkglCanvas8.6 -lTkglCanvas8.6])
TEA_ADD_CFLAGS([])
TEA_ADD_STUB_SOURCES([])
TEA_ADD_TCL_SOURCES([])

#--------------------------------------------------------------------
# __CHANGE__
#
# You can add more files to clean if your extension creates any extra
# files by extending CLEANFILES.
# Add pkgIndex.tcl if it is generated in the Makefile instead of ./configure
# and change Makefile.in to move it from CONFIG_CLEAN_FILES to BINARIES var.
#
# A few miscellaneous platform-specific items:
# TEA_ADD_* any platform specific compiler/build info here.
#--------------------------------------------------------------------

#CLEANFILES="$CLEANFILES pkgIndex.tcl"
if test "${TEA_PLATFORM}" = "windows" ; then
    # Ensure no empty if clauses
    :
    #TEA_ADD_SOURCES([win/winFile.c])
    #TEA_ADD_INCLUDES([-I\"$(${CYGPATH} ${srcdir}/win)\"])
else
    # Ensure no empty else clauses
    :
    #TEA_ADD_SOURCES([unix/unixFile.c])
    #TEA_ADD_LIBS([-lsuperfly])
fi

#--------------------------------------------------------------------
# __CHANGE__
# Choose which headers you need.  Extension authors should try very
# hard to only rely on the Tcl public header files.  Internal headers
# contain private data structures and are subject to change without
# notice.
# This MUST be called after TEA_LOAD_TCLCONFIG / TEA_LOAD_TKCONFIG
#--------------------------------------------------------------------

TEA_PUBLIC_TCL_HEADERS
#TEA_PRIVATE_TCL_HEADERS

TEA_PUBLIC_TK_HEADERS
TEA_PRIVATE_TK_HEADERS
TEA_PATH_X

#--------------------------------------------------------------------
# Check whether --enable-threads or --disable-threads was given.
# This auto-enables if Tcl was compiled threaded.
#--------------------------------------------------------------------

TEA_ENABLE_THREADS

#--------------------------------------------------------------------
# The statement below defines a collection of symbols related to
# building as a shared library instead of a static library.
#--------------------------------------------------------------------

TEA_ENABLE_SHARED

#--------------------------------------------------------------------
# This macro figures out what flags to use with the compiler/linker
# when building shared/static debug/optimized objects.  This information
# can be taken from the tclConfig.sh file, but this figures it all out.
#--------------------------------------------------------------------

TEA_CONFIG_CFLAGS

#--------------------------------------------------------------------
# Set the default compiler switches based on the --enable-symbols option.
#--------------------------------------------------------------------

TEA_ENABLE_SYMBOLS

#--------------------------------------------------------------------
# Everyone should be linking against the Tcl stub library.  If you
# can't for some reason, remove this definition.  If you aren't using
# stubs, you also need to modify the SHLIB_LD_LIBS setting below to
# link against the non-stubbed Tcl library.  Add Tk too if necessary.
#--------------------------------------------------------------------

#AC_DEFINE(USE_TCL_STUBS, 1, [Use Tcl stubs])
#AC_DEFINE(USE_TK_STUBS, 1, [Use Tk stubs])

#--------------------------------------------------------------------
# This macro generates a line to use when building a library.  It
# depends on values set by the TEA_ENABLE_SHARED, TEA_ENABLE_SYMBOLS,
# and TEA_LOAD_TCLCONFIG macros above.
#--------------------------------------------------------------------

TEA_MAKE_LIB

#--------------------------------------------------------------------
# Determine the name of the tclsh and/or wish executables in the
# Tcl and Tk build directories or the location they were installed
# into. These paths are used to support running test cases only,
# the Makefile should not be making use of these paths to generate
# a pkgIndex.tcl file or anything else at extension build time.
#--------------------------------------------------------------------

TEA_PROG_TCLSH
TEA_PROG_WISH

#--------------------------------------------------------------------
# Finally, substitute all of the various values into the Makefile.
# You may alternatively have a special pkgIndex.tcl.in or other files
# which require substituting th AC variables in.  Include these here.
#--------------------------------------------------------------------

AC_OUTPUT([Makefile pkgIndex.tcl])
